infrastructure/k8s-prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: 45.55.104.37
          http:
              paths:
                  - path: /api/payments/?(.*)
                    pathType: Prefix
                    backend:
                        serviceName: payments-cluster-ip-service
                        servicePort: 3000
                  - path: /api/users/?(.*)
                    pathType: Prefix
                    backend:
                        serviceName: auth-cluster-ip-service
                        servicePort: 3000
                  - path: /api/tickets/?(.*)
                    pathType: Prefix
                    backend:
                        serviceName: tickets-cluster-ip-service
                        servicePort: 3000
                  - path: /api/orders/?(.*)
                    pathType: Prefix
                    backend:
                        serviceName: orders-cluster-ip-service
                        servicePort: 3000
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        serviceName: client-cluster-ip-service
                        servicePort: 3000
